--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
