--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.local
+.env.test.local
+
+# Test coverage
+coverage
+.nyc_output
+
+# Vitest
+.vitest
