--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "test:integration": "vitest run src/test/integration --config vitest.config.ts",
+    "test:integration:watch": "vitest src/test/integration --config vitest.config.ts",
+    "test:integration:coverage": "vitest run src/test/integration --coverage --config vitest.config.ts",
+    "test:e2e": "vitest run src/test/e2e --config vitest.config.ts",
+    "test:e2e:watch": "vitest src/test/e2e --config vitest.config.ts"
   },
   "dependencies": {
     "react": "^19.2.0",
