--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "prettier": "^3.8.1",
     "prisma": "5.22.0",
     "supertest": "^7.2.2",
